<resources>
    <string name="app_name">Midland</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="welcome">Welcome</string>
    <string name="midland">Midland</string>
    <string name="erp_hrms">ERP &amp; HRMS </string>
    <string name="work_status">Work Status</string>
    <string name="request">Request</string>
    <string name="task">Task</string>
    <string name="approval">Approval</string>
    <string name="status">Status</string>
    <string name="payment">Payment</string>
    <string name="cash_requisition_status">Cash Requisition Status</string>
    <string name="cash_request_status">Cash Request Status</string>
    <string name="cash_utilisation_status">Cash Utilisation Status</string>
    <string name="cash_utilisation_request">Cash Utilisation Request</string>
    <string name="available_credit_status">Available Credit Status</string>
    <string name="payment_approval">Payment Approval</string>
    <string name="cash_request">Cash Request</string>
    <string name="cash_requisition_approval">Cash Requisition Approval</string>
    <string name="cash_utilisation_approval">Cash Utilisation Approval</string>
    <string name="product_requisition_approval">Product Requisition Approval</string>
    <string name="purchase_order_approval">Purchase Order Approval</string>
    <string name="user_task_reschedule_approval">User Task Reschedule Approval</string>
    <string name="user_task_assignment">User Task Assignment</string>
    <string name="user_task_view">User Task View</string>
    <string name="assigned_task_view">Assigned Task View</string>
    <string name="work_status_report">Work Status Report</string>
    <string name="work_status_report_list">Work Status Report List</string>
    <string name="requested_by">Requested By</string>
    <string name="document_no">Document No</string>
    <string name="requisition_type">Requisition Type</string>
    <string name="project">Project</string>
    <string name="description">Description</string>
    <string name="requested_amount">Requested Amount</string>
    <string name="requested_date">Requested Date</string>
    <string name="balance_utilisation_amount">Balance Utilisation Amount</string>
    <string name="approval_amount">Approval Amount</string>
    <string name="forward_to_user">Forward to User</string>
    <string name="forward_to_role">Forward to Role</string>
    <string name="is_verified">Is Verified</string>
    <string name="is_forward">Is Forward</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="notified_by">Notified By</string>
    <string name="requisition_record">Requisition Record</string>
    <string name="requisition_value">Requisition Value</string>
    <string name="amount_used">Amount Used</string>
    <string name="forward">Forward</string>
    <string name="reschedule">Reschedule</string>
    <string name="complete">Complete</string>
    <string name="start_date">Start Date</string>
    <string name="organisation">Organisation</string>
    <string name="document_number">Document Number</string>
    <string name="user">User</string>
    <string name="comment">Comment</string>
    <string name="warehouse">Warehouse</string>
    <string name="price_list">Price list</string>
    <string name="comments">Comments</string>
    <string name="completed_date">Completed Date</string>
    <string name="reschedule_details">Reschedule Details</string>
    <string name="product">Product</string>
    <string name="udm">UDM</string>
    <string name="quantity">Quantity</string>
    <string name="no">No.</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="sub_project_1">Sub Project 1</string>
    <string name="sub_project_2">Sub Project 2</string>
    <string name="phase">Phase</string>
    <string name="sub_task">Sub Task</string>
    <string name="work_name">Work Name</string>
    <string name="estimated">Estimated</string>
    <string name="estimated_rate">Estimated Rate</string>
    <string name="estimated_amount">Estimated Amount</string>
    <string name="actual">Actual</string>
    <string name="view_details">View Details</string>
    <string name="assigned_by">Assigned By</string>
    <string name="assigned_date">Assigned Date</string>
    <string name="estimated_start_date">Estimated Start Date</string>
    <string name="estimated_end_date">Estimated End date</string>
    <string name="rescheduled_start_date">Rescheduled Start date</string>
    <string name="rescheduled_end_date">Rescheduled End date</string>
    <string name="informed_to_user">Informed to User</string>
    <string name="informed_to_role">Informed to Role</string>
    <string name="verified_to_user">Verified to User</string>
    <string name="verified_to_role">Verified to Role</string>
    <string name="utilization_type">Utilization Type</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="total_amount">Total Amount</string>
    <string name="approved_amount">Approved Amount</string>
    <string name="business_partner">Business Partner</string>
    <string name="pending_credit_approval">Pending Credit Approval</string>
    <string name="pending_debit_approval">Pending Debit Approval</string>
    <string name="on_hand_balance">On Hand Balance</string>
    <string name="available_credit">Available Credit</string>
    <string name="request_type">Request Type</string>
    <string name="requested_to_user_role">Requested to User/Role</string>
    <string name="date_utilized">Date Utilized</string>
    <string name="requested_to_user">Requested to User</string>
    <string name="requested_to_role">Requested to Role</string>
    <string name="requested_type">Requested Type</string>
    <string name="balance_utilised_amount">Balance Utilised Amount</string>
</resources>
