<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/notified_by"/>

                <TextView
                    style="@style/text_description"
                    android:text="TextView"/>
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/requisition_record" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/project" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/description" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/requisition_value" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/amount_used" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/approved_amount" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/forward" />

                <CheckBox
                    android:id="@+id/checkBoxForward"
                    style="@style/text_description" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/forward_to_user" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/forward_to_role" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            style="@style/button_ruby"
            android:text="@string/approve" />

        <TextView
            style="@style/button_gray"
            android:text="@string/reject" />

    </LinearLayout>

</RelativeLayout>