<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/reschedule"/>

                <CheckBox
                    android:id="@+id/checkBoxReschedule"
                    style="@style/text_description" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/reschedule_details" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/status" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/complete" />

                <CheckBox
                    android:id="@+id/checkBoxComplete"
                    style="@style/text_description" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/start_date" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/completed_date" />

                <TextView
                    style="@style/text_description"
                    android:text="TextView" />
            </LinearLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_title"
                    android:text="@string/comments" />

                <TextView
                    style="@style/text_description"
                    android:visibility="invisible"
                    android:text="TextView" />
            </LinearLayout>

            <TextView
                style="@style/description_box"/>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            style="@style/button_ruby"
            android:text="@string/approve" />

        <TextView
            style="@style/button_gray"
            android:text="@string/reject" />

    </LinearLayout>

</RelativeLayout>